--- a/RetinaNet/RetinaNet_paper_review.ipynb
+++ b/RetinaNet/RetinaNet_paper_review.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "26cbb688",
+   "id": "7a2f429a",
    "metadata": {},
    "source": [
     "# RetinaNet (Focal Loss for Dense Object Detection)  \n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "060d1455",
+   "id": "fe8d563a",
    "metadata": {},
    "source": [
     "## Abstract  \n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fa373c3",
+   "id": "f3676aff",
    "metadata": {},
    "source": [
     "## Introduction  \n",
@@ -48,10 +48,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9e7a846",
+   "id": "07c3bf27",
    "metadata": {},
    "source": [
     "## Focal Loss  \n",
+    "<img src = \"https://github.com/Sangh0/Object-Detection/blob/main/RetinaNet/figure/figure1.PNG?raw=true\">\n",
+    "\n",
+    "**example**\n",
+    "- Focal Loss 이해를 위해 예시를 들어보자  \n",
+    "- foreground인 경우, label 값은 1이 되고 $p=0.95$, background인 경우, label 값은 0이 되고 $p=0.05$라고 가정하자  \n",
+    "- 그러면 standard Cross Entropy Loss에 입력해 얻는 값은 다음과 같다  \n",
+    "$$CE\\left(Foreground\\right)=-\\log\\left(0.95\\right)=0.05$$  \n",
+    "$$CE\\left(Background\\right)=-\\log\\left(1-0.05\\right)=0.05$$  \n",
+    "- foreground, background인 경우 둘 다 모두 동일한 loss 값 0.05을 가지는 것을 알 수 있다  \n",
+    "- 이런 경우에 생기는 문제점은, 일반적인 object detection 학습 과정에서는 foreground보다 background인 경우가 훨씬 더 많아 foreground에 대한 loss가 잘 학습이 되지 않는다  \n",
+    "- 이제 $\\gamma=0$일 때와 $\\gamma=5$일 때의 Focal Loss의 값을 알아보자  \n",
+    "$$FL\\left(0.05\\right)=-\\log\\left(0.05\\right)=2.9957\\qquad where\\quad \\gamma=0$$  \n",
+    "$$FL\\left(0.95\\right)=-\\log\\left(0.95\\right)=0.0513\\qquad where\\quad \\gamma=0$$  \n",
+    "$$FL\\left(0.05\\right)=-\\left(1-0.05\\right)^5\\log\\left(0.05\\right)=2.3180\\qquad where\\quad \\gamma=5$$\n",
+    "$$FL\\left(0.95\\right)=-\\left(1-0.95\\right)^5\\log\\left(0.95\\right)\\approx0\\qquad where\\quad \\gamma=5$$  \n",
+    "\n",
+    "- 위 결과를 보면 $\\gamma=0$인 경우보다 $\\gamma=5$인 경우가 easy negative sample에 대한 loss 값이 훨씬 더 적은 것을 알 수 있다  \n",
+    "- Focal Loss는 easy negative sample에 대한 loss를 거의 무시하면서 hard negative sample에 대해 집중적으로 학습할 수 있다  \n",
+    "\n",
+    "\n",
     "- Focal Loss는 one-stage object detection scenario에서 발생하는 극단적인 class imbalance 문제를 해결하기 위해 디자인되었다  \n",
     "\n",
     "$$CE\\left(p,y\\right)=\\left\\{\\begin{array}{cc} -\\log\\left(p\\right)\\\\-log\\left(1-p\\right) \\end{array}\\right.$$  \n",
@@ -61,6 +81,7 @@
     "- CE Loss는 figure 1에서 파란색 그래프에 해당한다  \n",
     "- 여기서 주목할 점은 $p_t$가 0.5보다 클 때 loss 값이 꽤 크다는 점이다  \n",
     "- 이러한 loss가 쌓이면 결국 모델이 잘 학습되지 않을 수 있다  \n",
+    "\n",
     "\n",
     "### Balanced Cross Entropy  \n",
     "- class imbalance를 해결하는 방법 중 하나로 weighted factor $\\alpha\\in\\left[0,1\\right]$을 도입했다  \n",
@@ -107,10 +128,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40cdbaaf",
+   "id": "6125f2d3",
    "metadata": {},
    "source": [
     "## RetinaNet Detector  \n",
+    "<img src = \"https://github.com/Sangh0/Object-Detection/blob/main/RetinaNet/figure/figure3.PNG?raw=true\">\n",
+    "\n",
     "- RetinaNet은 backbone network와 two task subnet으로 이루어져 있다  \n",
     "- 첫 번째 subnet은 backbone의 output에서 convolutional object classification을 진행한다  \n",
     "- 두 번째 subnet은 convolutional bounding box regression을 진행한다  \n",
@@ -171,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84a28612",
+   "id": "c0db1577",
    "metadata": {},
    "source": [
     "## Experiments  \n",
@@ -186,11 +209,15 @@
     "**Balanced Cross Entropy**  \n",
     "- table 1(a)에 balanced CE Loss를 사용한 결과가 있다  \n",
     "\n",
+    "<img src = \"https://github.com/Sangh0/Object-Detection/blob/main/RetinaNet/figure/table3.PNG?raw=true\">\n",
+    "\n",
     "**Focal Loss**  \n",
     "- $\\gamma$가 증가할수록 focal loss의 성능이 CE Loss의 성능을 뛰어넘는다  \n",
     "- $\\gamma=2$일 때 $\\alpha$-balanced CE Loss인 경우보다 2.9 point의 AP를 더 얻었다  \n",
-    "- 전체적으로 $\\gamma$가 클수록 $\\alpha\\in\\left[0.25, 0.75\\riht]$의 범위가 좋은 결과를 보여준다  \n",
+    "- 전체적으로 $\\gamma$가 클수록 $\\alpha\\in\\left[0.25, 0.75\\right]$의 범위가 좋은 결과를 보여준다  \n",
     "- 우리는 모든 실험에서 $\\gamma=2$, $\\alpha=0.25$를 사용했다  \n",
+    "\n",
+    "<img src = \"https://github.com/Sangh0/Object-Detection/blob/main/RetinaNet/figure/figure4.PNG?raw=true\">\n",
     "\n",
     "**Analysis of the Focal Loss**  \n",
     "- figure 4에 positive와 negative sample에 대한 누적 분포 함수를 보여주고 있다  \n",
@@ -199,6 +226,8 @@
     "- $\\gamma=0$일 때 positive와 negative의 그래프가 비슷하다  \n",
     "- 그러나 $\\gamma$가 증가할수록 hard negative에 weight가 더 많이 집중하는 것을 알 수 있다  \n",
     "- 이렇듯이 Focal Loss는 easy negative는 무시하면서 hard negative에 대해 더 많이 학습할 수 있다  \n",
+    "\n",
+    "<img src = \"https://github.com/Sangh0/Object-Detection/blob/main/RetinaNet/figure/table1.PNG?raw=true\">\n",
     "\n",
     "**Online Hard Example Mining (OHEM)**  \n",
     "- OHEM Loss는 focal loss와 비슷하게 잘못 분류된 example에 대해 학습을 집중적으로 한다  \n",
@@ -221,13 +250,15 @@
     "- RetinaNet의 scale을 더 키워도 two-stage detector의 성능을 능가하며 여전히 빠른 속도를 가진다  \n",
     "\n",
     "### Comparision to State of the Art  \n",
+    "<img src = \"https://github.com/Sangh0/Object-Detection/blob/main/RetinaNet/figure/table2.PNG?raw=true\">\n",
+    "\n",
     "- one-stage detector과 비교하면 5.9 AP point 더 좋은 성능을 얻는다  \n",
     "- two-stage detector과 비교해도 2.3 AP point 더 좋은 성능을 얻는다  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bc4e6da3",
+   "id": "4ead44d1",
    "metadata": {},
    "source": [
     "## Conclusion  \n",
